--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -3,10 +3,10 @@
         <div class="hero-body">
             <div class="container">
                 <div class="splash">
-                    <h2 class="splash__subheader is-size-3">
+                    <h2 class="splash__subheader is-family-secondary has-text-weight-medium is-size-3">
                         Don't wait for Monday.
                     </h2>
-                    <h1 class="splash__header title">
+                    <h1 class="splash__header title is-family-code is-size-0">
                         Discover Now
                     </h1>
                     <div class="buttons">
@@ -28,8 +28,8 @@
                         </a>
                     </div>
                     <div>
-                        <a class="anchor is-size-5">
-                            <span class="anchor__text">
+                        <a class="anchor">
+                            <span class="is-size-5 is-underlined">
                                 Learn more
                             </span>
                             <span class="anchor__icon icon">
