--- a/sass/components/splash.scss
+++ b/sass/components/splash.scss
@@ -2,13 +2,10 @@
   margin-top: -17rem;
 
   &__header {
-    font-family: "Permanent Marker", serif;
-    font-size: 6rem;
+    padding-bottom: 1rem;
   }
 
   &__subheader {
-    font-family: "Quicksand", sans-serif;
-    font-weight: 500;
     margin-bottom: -1.25rem;
   }
 }
