--- a/views/layouts/frame.gohtml
+++ b/views/layouts/frame.gohtml
@@ -7,7 +7,8 @@
         <title>Discover Now</title>
         <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker&text=Discover%20NowError404">
-        <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%27%2C%2D%2E">
         <link rel="stylesheet" href="/static/stylesheets/global.css">
     </head>
     <body>
