Finish factoring out css

--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -33,7 +33,7 @@
                                 Learn more
                             </span>
                             <span class="anchor__icon icon">
-                                <i class="fas fa-angle-down"></i>
+                                <i class="fas fa-angle-down fa-lg"></i>
                             </span>
                         </a>
                     </div>
