--- a/sass/settings/init.scss
+++ b/sass/settings/init.scss
@@ -18,11 +18,18 @@ $primary-invert: $green-invert;
 $link: $grey;
 $link-invert: $grey-invert;
 
+// Import Google fonts
+@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&text=Discover%20NowError404');
+@import url('https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40');
+//@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%27%2C%2D%2E"');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700');
+
 $size-0: 6rem;
-$family-sans-serif: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+$family-sans-serif: "Roboto", "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 
 @import "../bulma/utilities/derived-variables";
 
+$family-primary: $family-sans-serif;
 $family-secondary: "Quicksand", serif;
 $family-code: "Permanent Marker", serif;
 
