--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Permanent+Marker&text=Discover%20NowError404");
+@import url("https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700");
 .button, .is-unselectable, .delete, .modal-close {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -761,7 +764,7 @@ a.has-text-danger:hover, a.has-text-danger:focus {
 }
 
 .is-family-primary {
-  font-family: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
+  font-family: "Roboto", "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
 }
 
 .is-family-secondary {
@@ -769,7 +772,7 @@ a.has-text-danger:hover, a.has-text-danger:focus {
 }
 
 .is-family-sans-serif {
-  font-family: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
+  font-family: "Roboto", "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
 }
 
 .is-family-monospace {
@@ -1223,7 +1226,7 @@ button,
 input,
 select,
 textarea {
-  font-family: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-family: "Roboto", "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 code,
@@ -5985,17 +5988,15 @@ body.has-spaced-navbar-fixed-bottom {
   padding: 3rem 1.5rem 6rem;
 }
 
-.anchor__text {
-  text-decoration: underline;
-}
 .anchor__icon {
   position: relative;
   top: 0.25rem;
 }
 
+.button {
+  margin: 0.5rem 0.5rem 0.5rem 0 !important;
+}
 .button__text {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 500;
   padding-left: 0.25rem;
 }
 
