--- a/views/layouts/index.gohtml
+++ b/views/layouts/index.gohtml
@@ -1,4 +1,4 @@
-{{define "frame"}}
+{{define "index"}}
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -6,9 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Discover Now</title>
         <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker&text=Discover%20NowError404">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%27%2C%2D%2E">
         <link rel="stylesheet" href="/static/stylesheets/global.css">
     </head>
     <body>
