Add content section with cards

--- a/sass/settings/global.scss
+++ b/sass/settings/global.scss
@@ -28,3 +28,6 @@
 @import "../components/button.scss";
 @import "../components/landing.scss";
 @import "../components/splash.scss";
+@import "../components/hero";
+@import "../components/content";
+@import "../components/card";
