--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -6,7 +6,7 @@
                     <h2 class="splash__subheader is-family-secondary has-text-weight-medium is-size-3">
                         Don't wait for Monday.
                     </h2>
-                    <h1 class="splash__header title is-family-code is-size-0">
+                    <h1 class="splash__header title is-family-code has-text-weight-bold is-size-0">
                         Discover Now
                     </h1>
                     <div class="buttons">
@@ -36,6 +36,82 @@
                                 <i class="fas fa-angle-down fa-lg"></i>
                             </span>
                         </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content">
+        <div class="hero is-large">
+            <div class="hero-body">
+                <div class="container">
+                    <h2 class="hero__title title is-size-2 is-family-secondary">
+                        Why you should Discover Now
+                    </h2>
+                    <h3 class="subtitle is-family-secondary">
+                        We make it simple to find new music you'll love with ease and confidence
+                    </h3>
+                    <div class="columns">
+                        <div class="column">
+                            <div class="card">
+                                <div class="card-image has-text-centered">
+                                    <div>userLockIcon</div>
+                                </div>
+                                <div class="card-content">
+                                    <h4 class="title is-size-5 is-family-secondary has-text-centered">
+                                        Log in simply and securely
+                                    </h4>
+                                    <p class="card__copy is-size-6">
+                                        You have more than enough accounts and passwords to worry about. Simply connect to your existing Spotify account and we'll take care of the rest.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="card">
+                                <div class="card-image has-text-centered">
+                                    <div>walletIcon</div>
+                                </div>
+                                <div class="card-content">
+                                    <h4 class="title is-size-5 is-family-secondary has-text-centered">
+                                        Enjoy with no strings attached
+                                    </h4>
+                                    <p class="card__copy is-size-6">
+                                        Discover new music for free. We don't advertise, analyze, or as for a subscription. All we ask is for you to share and enjoy your experience of discovery.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="card">
+                                <div class="card-image has-text-centered">
+                                    <div>devicesIcon</div>
+                                </div>
+                                <div class="card-content">
+                                    <h4 class="title is-size-5 is-family-secondary has-text-centered">
+                                        Discover anytime and anywhere
+                                    </h4>
+                                    <p class="card__copy is-size-6">
+                                        Designed from the ground up to offer a polished experience for desktop, mobile, and everything in between. Discovery is only a tap or click away.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="card">
+                                <div class="card-image has-text-centered">
+                                    <div>codeIcon</div>
+                                </div>
+                                <div class="card-content">
+                                    <h4 class="title is-size-5 is-family-secondary has-text-centered">
+                                        Explore the open source code
+                                    </h4>
+                                    <p class="card__copy is-size-6">
+                                        The complete project is hosted on GitHub for your viewing pleasure. Take a quick peek to see how we handle your data and keep discovery ticking.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
