--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -1411,8 +1411,8 @@ th {
 }
 
 .card {
-  background-color: white;
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  background-color: #fafafa;
+  box-shadow: 0 15px 35px rgba(50, 50, 93, 0.05), 0 5px 15px rgba(0, 0, 0, 0.07);
   color: #4a4a4a;
   max-width: 100%;
   position: relative;
@@ -3594,9 +3594,9 @@ body.has-spaced-navbar-fixed-bottom {
 }
 
 .title {
-  color: #363636;
+  color: #242424;
   font-size: 2rem;
-  font-weight: 600;
+  font-weight: 500;
   line-height: 1.125;
 }
 .title strong {
@@ -3634,7 +3634,7 @@ body.has-spaced-navbar-fixed-bottom {
 .subtitle {
   color: #4a4a4a;
   font-size: 1.25rem;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.25;
 }
 .subtitle strong {
@@ -5993,9 +5993,6 @@ body.has-spaced-navbar-fixed-bottom {
   top: 0.25rem;
 }
 
-.button {
-  margin: 0.5rem 0.5rem 0.5rem 0 !important;
-}
 .button__text {
   padding-left: 0.25rem;
 }
@@ -6015,6 +6012,26 @@ body.has-spaced-navbar-fixed-bottom {
 }
 .splash__subheader {
   margin-bottom: -1.25rem;
+}
+
+.hero__title {
+  padding-bottom: 1.5rem;
+}
+
+.content {
+  background-image: url(/static/images/green.svg), linear-gradient(to right, whitesmoke, whitesmoke);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.card {
+  border-radius: 14px;
+  margin-top: 2rem;
+  padding: 1rem 0.5rem 2rem 0.5rem;
+}
+.card__copy {
+  line-height: 1.7em;
 }
 
 /*# sourceMappingURL=global.css.map */
