--- a/sass/settings/global.scss
+++ b/sass/settings/global.scss
@@ -24,10 +24,11 @@
 
 // Import custom stylesheets
 
-@import "../components/anchor.scss";
-@import "../components/button.scss";
-@import "../components/landing.scss";
-@import "../components/splash.scss";
+@import "../components/anchor";
+@import "../components/button";
+@import "../components/landing";
+@import "../components/splash";
 @import "../components/hero";
 @import "../components/content";
 @import "../components/card";
+@import "../components/icon";
