--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -6028,10 +6028,13 @@ body.has-spaced-navbar-fixed-bottom {
 .card {
   border-radius: 14px;
   margin-top: 2rem;
-  padding: 1rem 0.5rem 2rem 0.5rem;
+  padding: 2rem 1.25rem;
 }
 .card__copy {
   line-height: 1.7em;
+}
+.card-content {
+  padding: 1.5rem 1.25rem;
 }
 
 .heroicon-outline {
