Add cards, icons, text, and gradient

--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -3,6 +3,7 @@
   border-radius: 14px;
   margin-top: 2rem;
   padding: 2rem 1.25rem;
+  border-left: 4px solid hsl(160, 23%, 82%);
 
   &__copy {
     line-height: 1.7em;
