--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -262,4 +262,78 @@
             <div class="hero-body"></div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="columns">
+                <div class="column">
+                    <h1 class="footer__header">
+                        <a class="title has-text-weight-bold has-text-primary" href="http://127.0.0.1:3000/">
+                            Discover Now
+                        </a>
+                    </h1>
+                    <p class="footer__copy is-size-6 has-text-left has-text-primary">
+                        Discover Now is a Spotify playlist generator that learns from a user's recent musical interests. We are not endorsed by Spotify.
+                    </p>
+                </div>
+                <div class="column">
+                    <h4 class="footer__title title is-size-5 has-text-primary">
+                        Project
+                    </h4>
+                    <p class="footer__link">
+                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://github.com/Henry-Sarabia/discovernow">
+                            GitHub Repository
+                        </a>
+                    </p>
+                    <p class="footer__link">
+                        <a class="is-size-6 has-text-left has-text-grey-darker">
+                            License
+                        </a>
+                    </p>
+                </div>
+                <div class="column">
+                    <h4 class="footer__title title is-size-5 has-text-primary">
+                        Resources
+                    </h4>
+                    <p class="footer__link">
+                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://bulma.io/">
+                            Bulma
+                        </a>
+                    </p>
+                    <p class="footer__link">
+                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://fontawesome.com/">
+                            Font Awesome
+                        </a>
+                    </p>
+                    <p class="footer__link">
+                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://unsplash.com/@markusspiske">
+                            Unsplash
+                        </a>
+                    </p>
+                    <p class="footer__link">
+                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://coolbackgrounds.io/">
+                            Cool Backgrounds
+                        </a>
+                    </p>
+                </div>
+                <div class="column">
+                    <h4 class="footer__title title is-size-5 has-text-primary">
+                        Stack
+                    </h4>
+                    <p class="footer__link">
+                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://golang.org/">
+                            Go
+                        </a>
+                    </p>
+                    <p class="footer__link">
+                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://sass-lang.com/">
+                            Sass
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="has-text-primary">
+            Made with <span class="icon"><i class="fas fa-heart"></i></span> by Henry Sarabia
+        </div>
+    </footer>
 {{end}}
