Apply footer spacing styles

--- a/sass/settings/global.scss
+++ b/sass/settings/global.scss
@@ -27,6 +27,7 @@
 @import "../components/splash";
 @import "../components/landing";
 @import "../components/steps";
+@import "../components/footer";
 @import "../components/anchor";
 @import "../components/button";
 @import "../components/card";
