--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -315,7 +315,7 @@
                         </a>
                     </p>
                 </div>
-                <div class="column">
+                <div class="column footer__stack">
                     <h4 class="footer__title title is-size-5 has-text-primary">
                         Stack
                     </h4>
@@ -331,9 +331,9 @@
                     </p>
                 </div>
             </div>
-        </div>
-        <div class="has-text-primary">
-            Made with <span class="icon"><i class="fas fa-heart"></i></span> by Henry Sarabia
+            <div class="has-text-primary">
+                Made with <span class="icon"><i class="fas fa-heart"></i></span> by Henry Sarabia
+            </div>
         </div>
     </footer>
 {{end}}
