--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -280,12 +280,12 @@
                         Project
                     </h4>
                     <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://github.com/Henry-Sarabia/discovernow">
+                        <a class="is-size-6 has-text-left has-text-celadon" href="https://github.com/Henry-Sarabia/discovernow">
                             GitHub Repository
                         </a>
                     </p>
                     <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-grey-darker">
+                        <a class="is-size-6 has-text-left has-text-celadon">
                             License
                         </a>
                     </p>
@@ -295,22 +295,22 @@
                         Resources
                     </h4>
                     <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://bulma.io/">
+                        <a class="is-size-6 has-text-left has-text-celadon" href="https://bulma.io/">
                             Bulma
                         </a>
                     </p>
                     <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://fontawesome.com/">
+                        <a class="is-size-6 has-text-left has-text-celadon" href="https://fontawesome.com/">
                             Font Awesome
                         </a>
                     </p>
                     <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://unsplash.com/@markusspiske">
+                        <a class="is-size-6 has-text-left has-text-celadon" href="https://unsplash.com/@markusspiske">
                             Unsplash
                         </a>
                     </p>
                     <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://coolbackgrounds.io/">
+                        <a class="is-size-6 has-text-left has-text-celadon" href="https://coolbackgrounds.io/">
                             Cool Backgrounds
                         </a>
                     </p>
@@ -320,19 +320,19 @@
                         Stack
                     </h4>
                     <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://golang.org/">
+                        <a class="is-size-6 has-text-left has-text-celadon" href="https://golang.org/">
                             Go
                         </a>
                     </p>
                     <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-grey-darker" href="https://sass-lang.com/">
+                        <a class="is-size-6 has-text-left has-text-celadon" href="https://sass-lang.com/">
                             Sass
                         </a>
                     </p>
                 </div>
             </div>
             <div class="has-text-primary">
-                Made with <span class="icon"><i class="fas fa-heart"></i></span> by Henry Sarabia
+                Made with <span class="icon has-text-pink"><i class="fas fa-heart"></i></span> by Henry Sarabia
             </div>
         </div>
     </footer>
