Remove icon class from heart icon

--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -332,7 +332,7 @@
                 </div>
             </div>
             <div class="has-text-primary">
-                Made with <span class="icon has-text-pink"><i class="fas fa-heart"></i></span> by Henry Sarabia
+                Made with <span class="has-text-pink"><i class="fas fa-heart"></i></span> by Henry Sarabia
             </div>
         </div>
     </footer>
