Decrease footer bottom padding

--- a/sass/settings/init.scss
+++ b/sass/settings/init.scss
@@ -72,6 +72,7 @@ $card-background-color: $white-bis;
 
 // Override footer vars
 $footer-background-color: $forest;
+$footer-padding: 3rem 1.5rem;
 
 // Add helpers
 @import "../bulma/base/helpers";
