--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -6591,7 +6591,7 @@ body.has-spaced-navbar-fixed-bottom {
 
 .footer {
   background-color: #234d32;
-  padding: 3rem 1.5rem 6rem;
+  padding: 3rem 1.5rem;
 }
 
 .splash {
