--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -267,7 +267,7 @@
             <div class="columns">
                 <div class="column">
                     <h1 class="footer__header">
-                        <a class="title has-text-weight-bold has-text-primary" href="http://127.0.0.1:3000/">
+                        <a class="title has-text-weight-bold has-text-primary is-family-code" href="http://127.0.0.1:3000/">
                             Discover Now
                         </a>
                     </h1>
@@ -276,7 +276,7 @@
                     </p>
                 </div>
                 <div class="column">
-                    <h4 class="footer__title title is-size-5 has-text-primary">
+                    <h4 class="footer__title title is-size-5 has-text-primary is-family-secondary">
                         Project
                     </h4>
                     <p class="footer__link">
@@ -291,7 +291,7 @@
                     </p>
                 </div>
                 <div class="column">
-                    <h4 class="footer__title title is-size-5 has-text-primary">
+                    <h4 class="footer__title title is-size-5 has-text-primary is-family-secondary">
                         Resources
                     </h4>
                     <p class="footer__link">
@@ -316,7 +316,7 @@
                     </p>
                 </div>
                 <div class="column footer__stack">
-                    <h4 class="footer__title title is-size-5 has-text-primary">
+                    <h4 class="footer__title title is-size-5 has-text-primary is-family-secondary">
                         Stack
                     </h4>
                     <p class="footer__link">
