Apply font styles

--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -14,7 +14,7 @@
                             <span class="icon">
                                 <i class="fab fa-github fa-lg"></i>
                             </span>
-                            <span class="button__text">
+                            <span class="button__text is-family-monospace">
                                 Explore
                             </span>
                         </a>
@@ -22,14 +22,14 @@
                             <span class="icon">
                                 <i class="fab fa-spotify fa-lg"></i>
                             </span>
-                            <span class="button__text">
+                            <span class="button__text is-family-monospace">
                                 Connect
                             </span>
                         </a>
                     </div>
                     <div>
                         <a class="anchor">
-                            <span class="is-size-5 is-underlined">
+                            <span class="is-size-5 is-underlined is-family-monospace">
                                 Learn more
                             </span>
                             <span class="anchor__icon icon">
@@ -248,7 +248,7 @@
                                     <span class="icon">
                                         <i class="fab fa-spotify fa-lg"></i>
                                     </span>
-                                            <span class="button__text">
+                                            <span class="button__text is-family-monospace">
                                         Connect
                                     </span>
                                 </a>
