--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -2,7 +2,8 @@
 .card {
   border-radius: 14px;
   margin-top: 2rem;
-  padding: 2rem 1.25rem;
+  //padding: 2rem 1.125rem;
+  padding: 1rem .5rem 2rem;
   border-left: 4px solid hsl(160, 23%, 82%);
 
   &__copy {
@@ -11,6 +12,6 @@
 
   // Bulma class
   &-content {
-    padding: 1.5rem 1.25rem;
+    padding: 1.5rem;
   }
 }
