--- a/static/stylesheets/global.css
+++ b/static/stylesheets/global.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Permanent+Marker&text=Discover%20NowError404");
 @import url("https://fonts.googleapis.com/css?family=Quicksand:300,400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%21%22%27%2C%2D%2E%40");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,500&text=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz%20%27%2C%2D%2E"');
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700");
 .button, .is-unselectable, .delete, .modal-close {
   -webkit-touch-callout: none;
@@ -800,7 +801,7 @@ a.has-text-pink:hover, a.has-text-pink:focus {
 }
 
 .is-family-primary {
-  font-family: "Roboto", "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
+  font-family: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
 }
 
 .is-family-secondary {
@@ -808,11 +809,11 @@ a.has-text-pink:hover, a.has-text-pink:focus {
 }
 
 .is-family-sans-serif {
-  font-family: "Roboto", "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
+  font-family: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
 }
 
 .is-family-monospace {
-  font-family: monospace !important;
+  font-family: "Roboto", sans-serif !important;
 }
 
 .is-family-code {
@@ -1262,7 +1263,7 @@ button,
 input,
 select,
 textarea {
-  font-family: "Roboto", "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-family: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 code,
@@ -6641,14 +6642,14 @@ body.has-spaced-navbar-fixed-bottom {
 .card {
   border-radius: 14px;
   margin-top: 2rem;
-  padding: 2rem 1.25rem;
+  padding: 1rem 0.5rem 2rem;
   border-left: 4px solid #c7dcd5;
 }
 .card__copy {
   line-height: 1.7em;
 }
 .card-content {
-  padding: 1.5rem 1.25rem;
+  padding: 1.5rem;
 }
 
 .content {
