Factor out footer and footer subtemplates

--- a/views/home.gohtml
+++ b/views/home.gohtml
@@ -262,78 +262,5 @@
             <div class="hero-body"></div>
         </div>
     </section>
-    <footer class="footer">
-        <div class="container">
-            <div class="columns">
-                <div class="column">
-                    <h1 class="footer__header">
-                        <a class="title has-text-weight-bold has-text-primary is-family-code" href="http://127.0.0.1:3000/">
-                            Discover Now
-                        </a>
-                    </h1>
-                    <p class="footer__copy is-size-6 has-text-left has-text-primary">
-                        Discover Now is a Spotify playlist generator that learns from a user's recent musical interests. We are not endorsed by Spotify.
-                    </p>
-                </div>
-                <div class="column">
-                    <h4 class="footer__title title is-size-5 has-text-primary is-family-secondary">
-                        Project
-                    </h4>
-                    <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-celadon" href="https://github.com/Henry-Sarabia/discovernow">
-                            GitHub Repository
-                        </a>
-                    </p>
-                    <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-celadon">
-                            License
-                        </a>
-                    </p>
-                </div>
-                <div class="column">
-                    <h4 class="footer__title title is-size-5 has-text-primary is-family-secondary">
-                        Resources
-                    </h4>
-                    <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-celadon" href="https://bulma.io/">
-                            Bulma
-                        </a>
-                    </p>
-                    <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-celadon" href="https://fontawesome.com/">
-                            Font Awesome
-                        </a>
-                    </p>
-                    <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-celadon" href="https://unsplash.com/@markusspiske">
-                            Unsplash
-                        </a>
-                    </p>
-                    <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-celadon" href="https://coolbackgrounds.io/">
-                            Cool Backgrounds
-                        </a>
-                    </p>
-                </div>
-                <div class="column footer__stack">
-                    <h4 class="footer__title title is-size-5 has-text-primary is-family-secondary">
-                        Stack
-                    </h4>
-                    <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-celadon" href="https://golang.org/">
-                            Go
-                        </a>
-                    </p>
-                    <p class="footer__link">
-                        <a class="is-size-6 has-text-left has-text-celadon" href="https://sass-lang.com/">
-                            Sass
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="has-text-primary">
-                Made with <span class="has-text-pink"><i class="fas fa-heart"></i></span> by Henry Sarabia
-            </div>
-        </div>
-    </footer>
+    {{template "footer"}}
 {{end}}
