Factor out spotify button into subtemplate

--- a/views/layouts/cta.gohtml
+++ b/views/layouts/cta.gohtml
@@ -10,14 +10,7 @@
                     </div>
                     <div class="column">
                         <div class="has-text-left">
-                            <a class="button is-medium is-primary" href="{{.URL}}">
-                                <span class="icon">
-                                    <i class="fab fa-spotify fa-lg"></i>
-                                </span>
-                                <span class="button__text is-family-monospace">
-                                    Connect
-                                </span>
-                            </a>
+                            {{template "spotifyButton" .}}
                         </div>
                     </div>
                 </div>
