--- a/views/layouts/landing.gohtml
+++ b/views/layouts/landing.gohtml
@@ -18,14 +18,7 @@
                                 Explore
                             </span>
                         </a>
-                        <a class="button is-medium is-primary" href="{{.URL}}">
-                            <span class="icon">
-                                <i class="fab fa-spotify fa-lg"></i>
-                            </span>
-                            <span class="button__text is-family-monospace">
-                                Connect
-                            </span>
-                        </a>
+                        {{template "spotifyButton" .}}
                     </div>
                     <div>
                         <a class="anchor">
