Factor out hero title into subtemplate

--- a/views/layouts/features.gohtml
+++ b/views/layouts/features.gohtml
@@ -2,9 +2,7 @@
     <div class="features hero is-large">
         <div class="hero-body">
             <div class="container">
-                <h2 class="hero__title title is-size-2 is-family-secondary">
-                    Why you should Discover Now
-                </h2>
+                {{template "heroTitle" "Why you should Discover Now"}}
                 <h3 class="subtitle is-family-secondary">
                     We make it simple to find new music you'll love with ease and confidence
                 </h3>
