--- a/views/layouts/steps.gohtml
+++ b/views/layouts/steps.gohtml
@@ -2,9 +2,7 @@
     <div class="steps hero is-large">
         <div class="hero-body">
             <div class="container">
-                <h2 class="hero__title title is-size-2 is-family-secondary">
-                    It only takes seconds
-                </h2>
+                {{template "heroTitle" "It only takes seconds"}}
                 <h3 class="subtitle is-family-secondary">
                     Faithfully designed to get you listening to new music in as little as a few clicks
                 </h3>
