Factor out hero subtitle into subtemplate

--- a/views/layouts/features.gohtml
+++ b/views/layouts/features.gohtml
@@ -3,9 +3,7 @@
         <div class="hero-body">
             <div class="container">
                 {{template "heroTitle" "Why you should Discover Now"}}
-                <h3 class="subtitle is-family-secondary">
-                    We make it simple to find new music you'll love with ease and confidence
-                </h3>
+                {{template "heroSubtitle" "We make it simple to find new music you'll love with ease and confidence"}}
                 <div class="columns">
                     <div class="column">
                         <div class="card">
