--- a/views/layouts/steps.gohtml
+++ b/views/layouts/steps.gohtml
@@ -3,9 +3,7 @@
         <div class="hero-body">
             <div class="container">
                 {{template "heroTitle" "It only takes seconds"}}
-                <h3 class="subtitle is-family-secondary">
-                    Faithfully designed to get you listening to new music in as little as a few clicks
-                </h3>
+                {{template "heroSubtitle" "Faithfully designed to get you listening to new music in as little as a few clicks"}}
                 <div class="columns">
                     <div class="column">
                         <div class="card">
